# QC-Amp

./: .gitignore  Colour_factors.ipynb  LICENSE  README.md  pyproject.toml  table1_colour_factors.ipynb  table1_diagrams.ipynb
examples/: colour_factors_demo.ipynb
generated_table1_diagrams/: table1_diagram_summary.csv
src/qc_amp/: __init__.py  circuits.py  colour_factors.py  gates.py  su3.py
tests/: __init__.py  test_circuits.py  test_colour_factors.py  test_gates.py  test_su3.py
write_up/: compile.bat  figures_readme.tex  main.aux  main.bcf  main.out  main.tex  main.toc  references.bib
write_up/chapters/: algorithm.tex  appendices.tex  conclusions.tex  implementation.tex  introduction.tex  results.tex  theory.tex
